Simulation scrollbar padding bugfix (#1519)
* Add tiny margin to sim to prevent scrollbar appearing early

* Little weird formatting on urgent alerts sim

* Adjust padding for sim scrolling to be close to spec

--- a/assets/css/dup/dup_screen_page.scss
+++ b/assets/css/dup/dup_screen_page.scss
@@ -30,7 +30,7 @@
 .simulation-screen-scrolling-container {
   height: 100%;
   overflow-x: auto;
-  padding-bottom: 8px;
+  padding-bottom: 20px;
   .projection {
     display: grid;
     grid-template-columns: 280px 280px 280px;
